--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -14,3 +14,44 @@
     font-family: 'Neue Machina', sans-serif;
     text-align: center;
 }
+
+.information {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.information p {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: .5rem;
+    font-size: 1.125rem;
+}
+
+.information p::before {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: .5rem;
+}
+
+.information .cargo::before {
+    background-image: url('/assets/img/icons/cargo.svg');
+}
+
+.information .local::before {
+    background-image: url('/assets/img/icons/local.svg');
+}
+
+.information .fone::before {
+    background-image: url('/assets/img/icons/fone.svg');
+}
+
+.information .email::before {
+    background-image: url('/assets/img/icons/email.svg');
+}
