--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,6 +2,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+}
+
+.header::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 2rem;
+    height: 2rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('/assets/img/icons/header.svg');
 }
 
 .header .photo {
@@ -54,4 +68,28 @@
 
 .information .email::before {
     background-image: url('/assets/img/icons/email.svg');
+}
+
+@media only screen and (min-width: 768px) {
+    .header {
+        display: grid;
+        grid-template-areas:
+            "photo title"
+            "photo information";
+    }
+
+    .header .photo {
+        grid-area: photo;
+        margin: 0 auto;
+    }
+
+    .header .title {
+        grid-area: title;
+        text-align: start;
+        max-width: 220px;
+    }
+
+    .header .information {
+        grid-area: information;
+    }
 }
