adicionado guias: skill, experiência, portfólio e idiomas

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,6 +13,16 @@ body {
     color: #fff;
 }
 
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
 .main {
     padding: 1rem;
     margin: 1rem;
